--- a/src/components/pages/faculty-staff-directory-a-z-index.config.json
+++ b/src/components/pages/faculty-staff-directory-a-z-index.config.json
@@ -120,7 +120,7 @@
             "alt": "test"
           },
           "url": "#",
-          "title": "Lorem ipsum",
+          "title": "Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
           "email": "test@test.com",
           "phone": "(444) 444-4444"
@@ -131,7 +131,7 @@
             "alt": "test"
           },
           "url": "#",
-          "title": "Lorem ipsum",
+          "title": "Website Title Lorem Ipsum Even Longer Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
           "email": "",
           "phone": "(444) 444-4444"
@@ -142,7 +142,7 @@
             "alt": "test"
           },
           "url": "#",
-          "title": "Lorem ipsum",
+          "title": "Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
           "email": "test@test.com",
           "phone": ""
@@ -153,7 +153,7 @@
             "alt": "test"
           },
           "url": "#",
-          "title": "Lorem ipsum",
+          "title": "Website Title Lorem Ipsum Even Longer Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
           "email": "",
           "phone": ""
@@ -164,7 +164,7 @@
             "alt": "test"
           },
           "url": "",
-          "title": "Lorem ipsum",
+          "title": "Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
           "email": "",
           "phone": ""
