--- a/src/components/pages/faculty-staff-directory-general-search.config.json
+++ b/src/components/pages/faculty-staff-directory-general-search.config.json
@@ -14,7 +14,7 @@
             "alt": "test"
           },
           "url": "#",
-          "title": "Lorem ipsum",
+          "title": "Website Title Lorem Ipsum Even Longer Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
           "email": "test@test.com",
           "phone": "(444) 444-4444"
@@ -36,7 +36,7 @@
             "alt": "test"
           },
           "url": "#",
-          "title": "Lorem ipsum",
+          "title": "Website Title Lorem Ipsum Even Longer Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
           "email": "test@test.com",
           "phone": ""
@@ -58,7 +58,7 @@
             "alt": "test"
           },
           "url": "",
-          "title": "Lorem ipsum",
+          "title": "Website Title Lorem Ipsum Even Longer Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
           "email": "",
           "phone": ""
