--- a/src/components/pages/faculty-staff-faculty-cards.config.json
+++ b/src/components/pages/faculty-staff-faculty-cards.config.json
@@ -14,7 +14,7 @@
             "alt": "test"
           },
           "url": "#",
-          "title": "Lorem ipsum",
+          "title": "Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
         },
         {
@@ -23,7 +23,7 @@
             "alt": "test"
           },
           "url": "#",
-          "title": "Lorem ipsum",
+          "title": "Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
         },
         {
@@ -32,7 +32,7 @@
             "alt": "test"
           },
           "url": "#",
-          "title": "Lorem ipsum",
+          "title": "Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
         },
         {
@@ -41,7 +41,7 @@
             "alt": "test"
           },
           "url": "#",
-          "title": "Lorem ipsum",
+          "title": "Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
         },
         {
@@ -50,7 +50,7 @@
             "alt": "test"
           },
           "url": "",
-          "title": "Lorem ipsum",
+          "title": "Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
         }
       ],
@@ -61,7 +61,7 @@
             "alt": "test"
           },
           "url": "#",
-          "title": "Lorem ipsum",
+          "title": "Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
         },
         {
@@ -70,7 +70,7 @@
             "alt": "test"
           },
           "url": "#",
-          "title": "Lorem ipsum",
+          "title": "Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
         },
         {
@@ -79,7 +79,7 @@
             "alt": "test"
           },
           "url": "#",
-          "title": "Lorem ipsum",
+          "title": "Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
         },
         {
@@ -88,7 +88,7 @@
             "alt": "test"
           },
           "url": "#",
-          "title": "Lorem ipsum",
+          "title": "Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
         },
         {
@@ -97,7 +97,7 @@
             "alt": "test"
           },
           "url": "",
-          "title": "Lorem ipsum",
+          "title": "Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
         }
       ],
@@ -108,7 +108,7 @@
             "alt": "test"
           },
           "url": "#",
-          "title": "Lorem ipsum",
+          "title": "Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
         },
         {
@@ -117,7 +117,7 @@
             "alt": "test"
           },
           "url": "#",
-          "title": "Lorem ipsum",
+          "title": "Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
         },
         {
@@ -126,7 +126,7 @@
             "alt": "test"
           },
           "url": "#",
-          "title": "Lorem ipsum",
+          "title": "Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
         },
         {
@@ -135,7 +135,7 @@
             "alt": "test"
           },
           "url": "#",
-          "title": "Lorem ipsum",
+          "title": "Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
         },
         {
@@ -144,7 +144,7 @@
             "alt": "test"
           },
           "url": "",
-          "title": "Lorem ipsum",
+          "title": "Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
         }
       ]
