Adjust text format for for News Hub and Article pages

--- a/src/components/featured-news/featured-news.config.json
+++ b/src/components/featured-news/featured-news.config.json
@@ -7,7 +7,7 @@
     "url": "#",
     "title": "Lorem ipsum dolor sit amet",
     "excerpt": "Ut aliquam purus sit amet luctus venenatis lectus magna fringilla. Vel pharetra vel turpis nunc eget lorem. Sed augue lacus viverra vitae.",
-    "tags": ["Lorem ipsum", "dolor sit amet", "consectetur adipiscing elit", "sed do eiusmod"],
+    "tags": ["Lorem ipsum", "dolor sit amet", "consectetur adipiscing elit"],
     "date": "September 12, 2023",
     "small_articles": [
       {
