--- a/src/components/pages/news-hub.config.json
+++ b/src/components/pages/news-hub.config.json
@@ -27,7 +27,7 @@
       "url": "#",
       "title": "Website Title Lorem Ipsum Even Longer Lorem Ipsum",
       "excerpt": "Ut aliquam purus sit amet luctus venenatis lectus magna fringilla. Vel pharetra vel turpis nunc eget lorem. Sed augue lacus viverra vitae.",
-      "tags": ["Lorem ipsum", "dolor sit amet", "consectetur adipiscing elit", "sed do eiusmod"],
+      "tags": ["Lorem ipsum", "dolor sit amet", "consectetur adipiscing elit"],
       "date": "September 12, 2023",
       "small_articles": [
         {
