Dev in progress. fullcalendar template theming / detail page

--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "@babel/preset-env": "^7.7.7",
     "@frctl/fractal": "^1.2.1",
     "@frctl/twig": "^1.1.0",
+    "@fullcalendar/core": "^6.1.5",
+    "@fullcalendar/daygrid": "^6.1.5",
+    "@fullcalendar/list": "^6.1.5",
+    "@fullcalendar/timegrid": "^6.1.5",
     "@types/node": "^10.17.11",
     "@types/youtube-player": "^5.5.6",
     "@vimeo/player": "^2.17.1",
@@ -36,6 +40,7 @@
     "css-loader": "^2.1.1",
     "extract-loader": "^3.0.0",
     "file-loader": "^1.1.11",
+    "fullcalendar": "^6.1.5",
     "html-loader": "^0.5.1",
     "husky": "^3.0.9",
     "lint-staged": "^9.4.3",
