Adding extra key value pair to the faculty-staff-fieed-item and the faculty-staff-card.

--- a/src/components/faculty-staff-card/faculty-staff-card.config.json
+++ b/src/components/faculty-staff-card/faculty-staff-card.config.json
@@ -6,6 +6,26 @@
     },
     "url": "#",
     "title": "Lorem ipsum",
-    "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
+    "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
+    "email": "test@test.com",
+    "phone": "(444) 444-4444",
+    "facts": [
+      {
+        "key": "Name",
+        "value": "Lorem ipsum"
+      },
+      {
+        "key": "Name2",
+        "value": "<a href='#'>Lorem ipsum</a>"
+      },
+      {
+        "key": "Name3",
+        "value": "<a href='#'>Lorem ipsum</a>"
+      },
+      {
+        "key": "Name4",
+        "value": "Lorem ipsum"
+      }
+    ]
   }
 }
