--- a/src/components/pages/faculty-staff-directory-combined-search.config.json
+++ b/src/components/pages/faculty-staff-directory-combined-search.config.json
@@ -123,7 +123,25 @@
           "title": "Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
           "email": "test@test.com",
-          "phone": "(444) 444-4444"
+          "phone": "(444) 444-4444",
+          "facts": [
+            {
+              "key": "Name",
+              "value": "Lorem ipsum"
+            },
+            {
+              "key": "Name2",
+              "value": "<a href='#'>Lorem ipsum</a>"
+            },
+            {
+              "key": "Name3",
+              "value": "<a href='#'>Lorem ipsum</a>"
+            },
+            {
+              "key": "Name4",
+              "value": "Lorem ipsum"
+            }
+          ]
         },
         {
           "image": {
@@ -134,7 +152,17 @@
           "title": "Website Title Lorem Ipsum Even Longer Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
           "email": "",
-          "phone": "(444) 444-4444"
+          "phone": "(444) 444-4444",
+          "facts": [
+            {
+              "key": "Name",
+              "value": "Lorem ipsum"
+            },
+            {
+              "key": "Name2",
+              "value": "<a href='#'>Lorem ipsum</a>"
+            }
+          ]
         },
         {
           "image": {
@@ -145,7 +173,13 @@
           "title": "Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
           "email": "test@test.com",
-          "phone": ""
+          "phone": "",
+          "facts": [
+            {
+              "key": "Name",
+              "value": "Lorem ipsum"
+            }
+          ]
         },
         {
           "image": {
@@ -156,7 +190,21 @@
           "title": "Website Title Lorem Ipsum Even Longer Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
           "email": "",
-          "phone": ""
+          "phone": "",
+          "facts": [
+            {
+              "key": "Name",
+              "value": "Lorem ipsum"
+            },
+            {
+              "key": "Name2",
+              "value": "<a href='#'>Lorem ipsum</a>"
+            },
+            {
+              "key": "Name3",
+              "value": "<a href='#'>Lorem ipsum</a>"
+            }
+          ]
         },
         {
           "image": {
@@ -167,7 +215,21 @@
           "title": "Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
           "email": "",
-          "phone": ""
+          "phone": "",
+          "facts": [
+            {
+              "key": "Name",
+              "value": "Lorem ipsum"
+            },
+            {
+              "key": "Name2",
+              "value": "<a href='#'>Lorem ipsum</a>"
+            },
+            {
+              "key": "Name3",
+              "value": "<a href='#'>Lorem ipsum</a>"
+            }
+          ]
         }
       ]
     }
