--- a/src/components/pages/faculty-staff-directory-general-search.config.json
+++ b/src/components/pages/faculty-staff-directory-general-search.config.json
@@ -14,21 +14,28 @@
             "alt": "test"
           },
           "url": "#",
-          "title": "Website Title Lorem Ipsum Even Longer Lorem Ipsum",
+          "title": "Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
           "email": "test@test.com",
-          "phone": "(444) 444-4444"
-        },
-        {
-          "image": {
-            "src": "../../img/emmanuel_agba.png",
-            "alt": "test"
-          },
-          "url": "#",
-          "title": "Lorem ipsum",
-          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
-          "email": "",
-          "phone": "(444) 444-4444"
+          "phone": "(444) 444-4444",
+          "facts": [
+            {
+              "key": "Name",
+              "value": "Lorem ipsum"
+            },
+            {
+              "key": "Name2",
+              "value": "<a href='#'>Lorem ipsum</a>"
+            },
+            {
+              "key": "Name3",
+              "value": "<a href='#'>Lorem ipsum</a>"
+            },
+            {
+              "key": "Name4",
+              "value": "Lorem ipsum"
+            }
+          ]
         },
         {
           "image": {
@@ -38,8 +45,18 @@
           "url": "#",
           "title": "Website Title Lorem Ipsum Even Longer Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
-          "email": "test@test.com",
-          "phone": ""
+          "email": "",
+          "phone": "(444) 444-4444",
+          "facts": [
+            {
+              "key": "Name",
+              "value": "Lorem ipsum"
+            },
+            {
+              "key": "Name2",
+              "value": "<a href='#'>Lorem ipsum</a>"
+            }
+          ]
         },
         {
           "image": {
@@ -47,10 +64,41 @@
             "alt": "test"
           },
           "url": "#",
-          "title": "Lorem ipsum",
+          "title": "Lorem Ipsum",
+          "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
+          "email": "test@test.com",
+          "phone": "",
+          "facts": [
+            {
+              "key": "Name",
+              "value": "Lorem ipsum"
+            }
+          ]
+        },
+        {
+          "image": {
+            "src": "../../img/emmanuel_agba.png",
+            "alt": "test"
+          },
+          "url": "#",
+          "title": "Website Title Lorem Ipsum Even Longer Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
           "email": "",
-          "phone": ""
+          "phone": "",
+          "facts": [
+            {
+              "key": "Name",
+              "value": "Lorem ipsum"
+            },
+            {
+              "key": "Name2",
+              "value": "<a href='#'>Lorem ipsum</a>"
+            },
+            {
+              "key": "Name3",
+              "value": "<a href='#'>Lorem ipsum</a>"
+            }
+          ]
         },
         {
           "image": {
@@ -58,10 +106,24 @@
             "alt": "test"
           },
           "url": "",
-          "title": "Website Title Lorem Ipsum Even Longer Lorem Ipsum",
+          "title": "Lorem Ipsum",
           "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
           "email": "",
-          "phone": ""
+          "phone": "",
+          "facts": [
+            {
+              "key": "Name",
+              "value": "Lorem ipsum"
+            },
+            {
+              "key": "Name2",
+              "value": "<a href='#'>Lorem ipsum</a>"
+            },
+            {
+              "key": "Name3",
+              "value": "<a href='#'>Lorem ipsum</a>"
+            }
+          ]
         }
       ]
     }
