--- a/src/components/faculty-staff-card-set/faculty-staff-card-set.config.json
+++ b/src/components/faculty-staff-card-set/faculty-staff-card-set.config.json
@@ -8,7 +8,27 @@
         },
         "url": "#",
         "title": "Lorem ipsum",
-        "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
+        "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
+        "email": "test@test.com",
+        "phone": "(444) 444-4444",
+        "facts": [
+          {
+            "key": "Name",
+            "value": "Lorem ipsum"
+          },
+          {
+            "key": "Name2",
+            "value": "<a href='#'>Lorem ipsum</a>"
+          },
+          {
+            "key": "Name3",
+            "value": "<a href='#'>Lorem ipsum</a>"
+          },
+          {
+            "key": "Name4",
+            "value": "Lorem ipsum"
+          }
+        ]
       },
       {
         "image": {
@@ -17,7 +37,19 @@
         },
         "url": "#",
         "title": "Lorem ipsum",
-        "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
+        "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
+        "email": "test@test.com",
+        "phone": "",
+        "facts": [
+          {
+            "key": "Name",
+            "value": "Lorem ipsum"
+          },
+          {
+            "key": "Name2",
+            "value": "<a href='#'>Lorem ipsum</a>"
+          }
+        ]
       },
       {
         "image": {
@@ -26,7 +58,15 @@
         },
         "url": "#",
         "title": "Lorem ipsum",
-        "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
+        "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
+        "email": "",
+        "phone": "(444) 444-4444",
+        "facts": [
+          {
+            "key": "Name",
+            "value": "Lorem ipsum"
+          }
+        ]
       },
       {
         "image": {
@@ -35,7 +75,23 @@
         },
         "url": "#",
         "title": "Lorem ipsum",
-        "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet."
+        "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
+        "email": "",
+        "phone": "",
+        "facts": [
+          {
+            "key": "Name",
+            "value": "Lorem ipsum"
+          },
+          {
+            "key": "Name2",
+            "value": "<a href='#'>Lorem ipsum</a>"
+          },
+          {
+            "key": "Name3",
+            "value": "<a href='#'>Lorem ipsum</a>"
+          }
+        ]
       }
     ]
   }
