--- a/src/components/faculty-staff-feed-item-set/faculty-staff-feed-item-set.config.json
+++ b/src/components/faculty-staff-feed-item-set/faculty-staff-feed-item-set.config.json
@@ -10,7 +10,25 @@
         "title": "Lorem ipsum",
         "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
         "email": "test@test.com",
-        "phone": "(444) 444-4444"
+        "phone": "(444) 444-4444",
+        "facts": [
+          {
+            "key": "Name",
+            "value": "Lorem ipsum"
+          },
+          {
+            "key": "Name2",
+            "value": "<a href='#'>Lorem ipsum</a>"
+          },
+          {
+            "key": "Name3",
+            "value": "<a href='#'>Lorem ipsum</a>"
+          },
+          {
+            "key": "Name4",
+            "value": "Lorem ipsum"
+          }
+        ]
       },
       {
         "image": {
@@ -21,7 +39,17 @@
         "title": "Lorem ipsum",
         "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
         "email": "",
-        "phone": "(444) 444-4444"
+        "phone": "(444) 444-4444",
+        "facts": [
+          {
+            "key": "Name",
+            "value": "Lorem ipsum"
+          },
+          {
+            "key": "Name2",
+            "value": "<a href='#'>Lorem ipsum</a>"
+          }
+        ]
       },
       {
         "image": {
@@ -32,7 +60,21 @@
         "title": "Lorem ipsum",
         "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
         "email": "test@test.com",
-        "phone": ""
+        "phone": "",
+        "facts": [
+          {
+            "key": "Name",
+            "value": "Lorem ipsum"
+          },
+          {
+            "key": "Name2",
+            "value": "<a href='#'>Lorem ipsum</a>"
+          },
+          {
+            "key": "Name3",
+            "value": "<a href='#'>Lorem ipsum</a>"
+          }
+        ]
       },
       {
         "image": {
@@ -43,7 +85,13 @@
         "title": "Lorem ipsum",
         "body": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut consequat semper viverra nam libero justo laoreet.",
         "email": "",
-        "phone": ""
+        "phone": "",
+        "facts": [
+          {
+            "key": "Name",
+            "value": "Lorem ipsum"
+          }
+        ]
       }
     ]
   }
