Updates to new "grid list" component based on client feedback (https://trello.com/c/5n1ayYzT/31-grid-list)

--- a/src/components/pages/kitchen-sink.config.json
+++ b/src/components/pages/kitchen-sink.config.json
@@ -148,6 +148,11 @@
           "text": "Undergraduate Student"
         },
         {
+          "image": "https://cdn.theme.iastate.edu/img/iastate22/icons/multicolor-icon-undergraduate.svg",
+          "url": "",
+          "text": "Non-Link Example"
+        },
+        {
           "image": "https://cdn.theme.iastate.edu/img/iastate22/icons/multicolor-icon-graduate.svg",
           "url": "https://iastate.edu",
           "text": "Graduate Student"
