Renaming Stater headers to new hero variants and updating their usage within pages. Fixes to News Hub mark up for heroes with no subnav

--- a/src/components/pages/event-components.config.json
+++ b/src/components/pages/event-components.config.json
@@ -1,7 +1,11 @@
 {
   "context": {
     "hero": {
-      "headline": "Event Components"
+      "breadcrumbs": {
+        "links": []
+      },
+      "title": "Event Components",
+      "image": ""
     },
     "card_set_three_links": {
       "teaser_event": true,
