Updating Faculty Cards to allow for optional link - updating data structure in json file

--- a/src/components/faculty-staff-card-set/faculty-staff-card-set.config.json
+++ b/src/components/faculty-staff-card-set/faculty-staff-card-set.config.json
@@ -1,6 +1,6 @@
 {
   "context": {
-    "faculty_staff_category1": [
+    "cards": [
       {
         "image": {
           "src": "../../img/emmanuel_agba.png",
