https://trello.com/c/k4chn4j7 Demo available on the fractal page to show its working

--- a/src/components/card/card.config.json
+++ b/src/components/card/card.config.json
@@ -17,7 +17,7 @@
         "image": "../../img/IMG-HP_Find_My_Major_FPO.jpg",
         "cta": {
           "url": "https://www.iastate.edu/",
-          "text": "Find My Major"
+          "text": "Find My Major Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et"
         }
       }
     },
