--- a/src/components/grid-list/grid-list.config.json
+++ b/src/components/grid-list/grid-list.config.json
@@ -4,52 +4,90 @@
     "sublabel": "Lorem ipsum eiusmod proident duis dolore proident officia adipiscing sunt proident tempor enim aliquip commodo eiusmod enim ex quis dolor",
     "grid_list": [
       {
-        "image": "https://placehold.co/500x400",
+        "media": {
+          "image": "",
+          "icon_id": "fa-solid fa-graduation-cap"
+        },
         "url": "https://iastate.edu",
-        "text": "Undergraduate Student"
+        "text": "Font Awesome Example"
       },
       {
-        "image": "https://placehold.co/500x400",
+        "media": {
+          "image": "",
+          "icon_id": "fak fa-iastate22-email"
+        },
+        "url": "https://iastate.edu",
+        "text": "Font Awesome Example Two"
+      },
+      {
+        "media": {
+          "image": "https://placehold.co/500x400",
+          "icon_id": ""
+        },
         "url": "https://iastate.edu",
         "text": ""
       },
       {
-        "image": "",
+        "media": {
+          "image": "",
+          "icon_id": ""
+        },
         "url": "https://iastate.edu",
         "text": "Lorem ipsum eiusmod proident duis dolore"
       },
       {
-        "image": "https://cdn.theme.iastate.edu/img/iastate22/icons/multicolor-icon-undergraduate.svg",
+        "media": {
+          "image": "https://cdn.theme.iastate.edu/img/iastate22/icons/multicolor-icon-undergraduate.svg",
+          "icon_id": ""
+        },
         "url": "https://iastate.edu",
         "text": "Undergraduate Student"
       },
       {
-        "image": "https://cdn.theme.iastate.edu/img/iastate22/icons/multicolor-icon-undergraduate.svg",
+        "media": {
+          "image": "https://cdn.theme.iastate.edu/img/iastate22/icons/multicolor-icon-undergraduate.svg",
+          "icon_id": ""
+        },
         "url": "",
         "text": "Non-Link Example"
       },
       {
-        "image": "https://cdn.theme.iastate.edu/img/iastate22/icons/multicolor-icon-graduate.svg",
+        "media": {
+          "image": "https://cdn.theme.iastate.edu/img/iastate22/icons/multicolor-icon-graduate.svg",
+          "icon_id": ""
+        },
         "url": "https://iastate.edu",
         "text": "Graduate Student"
       },
       {
-        "image": "https://cdn.theme.iastate.edu/img/iastate22/icons/multicolor-icon-transfer.svg",
+        "media": {
+          "image": "https://cdn.theme.iastate.edu/img/iastate22/icons/multicolor-icon-transfer.svg",
+          "icon_id": ""
+        },
         "url": "https://iastate.edu",
         "text": "Transfer Student"
       },
       {
-        "image": "https://cdn.theme.iastate.edu/img/iastate22/icons/multicolor-icon-non-degree.svg",
+        "media": {
+          "image": "https://cdn.theme.iastate.edu/img/iastate22/icons/multicolor-icon-non-degree.svg",
+          "icon_id": ""
+        },
         "url": "https://iastate.edu",
         "text": "Non-Degree Student"
       },
       {
-        "image": "https://cdn.theme.iastate.edu/img/iastate22/icons/multicolor-icon-military-non-traditional.svg",
+        "media": {
+          "image": "https://cdn.theme.iastate.edu/img/iastate22/icons/multicolor-icon-military-non-traditional.svg",
+          "icon_id": ""
+        },
         "url": "https://iastate.edu",
         "text": "Military or Nontraditional Student"
       },
       {
-        "image": "https://cdn.theme.iastate.edu/img/iastate22/icons/multicolor-icon-international.svg",
+        "media": {
+          "image": "https://cdn.theme.iastate.edu/img/iastate22/icons/multicolor-icon-international.svg",
+          "icon_id": ""
+        },
         "url": "https://iastate.edu",
         "text": "International Student"
       }
